[package]
name = "lucid-raycaster"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.13.0"
winit = { version = "0.28", features = ["serde"] }
rodio = "0.17"
image = "0.24"
glam = "0.24"
pathfinding = "4.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
env_logger = "0.10"
log = "0.4"
raw-window-handle = "0.5"
