[package]
name = "lucid-raycaster"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.13.0"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
glam = { version = "0.24", features = ["serde"] }
image = "0.24"
rodio = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
default = ["logging"]
logging = []
